Modified intro screen to prevent iOS overlap

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -138,16 +138,14 @@
 }
 
 .sliderlogo {
-  position: absolute;
-  margin-top: 100px
-  bottom: 100px;
-  max-width: 150px;
+  max-height: 150px; 
   padding: 20px;
+  padding: 10px;
 }
 
 .slide-content h3 {
 	color: #5852A3;
-	margin-bottom: 40px;
+	margin-bottom: 15px;
   font-weight: 570;
 }
 
